GPII-364: Corrected a layout bug in "Add contrast" adjuster group.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -958,7 +958,7 @@ input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon:before {
 }
 
 .gpii-contrastThemeIndicator {
-	margin: 0 0 0 0.75em !important;
+	margin: 0 0 0 calc(0.75em + 5px) !important;
 }
 
 .gpii-contrast-contrastOptions {
